--- a/assets/src/scss/base/typography/_headings.scss
+++ b/assets/src/scss/base/typography/_headings.scss
@@ -52,6 +52,13 @@ h5,
     font-family: $collaborate_main_font;
 }
 
+.h5--secondary {
+    font-size: 16px;
+    line-height: 19px;
+    font-weight: 400;
+    font-family: $collaborate_main_font;
+}
+
 h6,
 .h6 {
     font-size: 15px;
