--- a/assets/src/scss/components/_components.scss
+++ b/assets/src/scss/components/_components.scss
@@ -10,6 +10,7 @@
 @import "primary/category";
 @import "primary/comments";
 @import "primary/profile";
+@import "primary/instructors";
 @import "common/button";
 @import "common/social-share";
 @import "common/pagination";
