Add instructor profile Page

--- a/assets/src/scss/components/_components.scss
+++ b/assets/src/scss/components/_components.scss
@@ -11,6 +11,7 @@
 @import "primary/comments";
 @import "primary/profile";
 @import "primary/instructors";
+@import "primary/instructor-profile";
 @import "common/button";
 @import "common/social-share";
 @import "common/pagination";
